# aspnetcore/src/IO.Swagger/Models/ApplicationInformation.cs
@@ -1,7 +1,7 @@
 /*
- * Green Button Resource Server API Documentation
+ * Green Button Resource Server ApplicationInformation API Documentation
  *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ * The ApplicationInformation resource contains information used by Data Custodians and Third Party applications to communicate with each other.  The ApplicationInformation resource is created when a Third Party Application registers with a Data Custodian.
  *
  * OpenAPI spec version: 1.0.0
  * Contact: dcoffin@greenbuttonalliance.org
@@ -309,6 +309,162 @@ namespace IO.Swagger.Models
         public string ClientId { get; set; }
 
         /// <summary>
+        /// URI of the Third Party Application&#x27;s Terms of Service
+        /// </summary>
+        /// <value>URI of the Third Party Application&#x27;s Terms of Service</value>
+        [DataMember(Name="tos_uri")]
+        public string TosUri { get; set; }
+
+        /// <summary>
+        /// URI of the Third Party Application&#x27;s Usage Policy
+        /// </summary>
+        /// <value>URI of the Third Party Application&#x27;s Usage Policy</value>
+        [DataMember(Name="policy_uri")]
+        public string PolicyUri { get; set; }
+
+        /// <summary>
+        /// Third Party Application Software Identifier
+        /// </summary>
+        /// <value>Third Party Application Software Identifier</value>
+        [Required]
+        [DataMember(Name="software_id")]
+        public string SoftwareId { get; set; }
+
+        /// <summary>
+        /// Third Party Application Version
+        /// </summary>
+        /// <value>Third Party Application Version</value>
+        [Required]
+        [DataMember(Name="software_version")]
+        public string SoftwareVersion { get; set; }
+
+        /// <summary>
+        /// Epoch date/time the Data Custodian assigned the Third Party Application&#x27;s client_id
+        /// </summary>
+        /// <value>Epoch date/time the Data Custodian assigned the Third Party Application&#x27;s client_id</value>
+        [Required]
+        [DataMember(Name="client_id_issued_at")]
+        public long? ClientIdIssuedAt { get; set; }
+
+        /// <summary>
+        /// Epoch date/time when the Data Custodian assigned client_secret expires (0 indicates the client_secret never expires)
+        /// </summary>
+        /// <value>Epoch date/time when the Data Custodian assigned client_secret expires (0 indicates the client_secret never expires)</value>
+        [Required]
+        [DataMember(Name="client_secret_expires_at")]
+        public long? ClientSecretExpiresAt { get; set; }
+
+        /// <summary>
+        /// Array of emails for Third Party Application support
+        /// </summary>
+        /// <value>Array of emails for Third Party Application support</value>
+        [DataMember(Name="contacts")]
+        public List<string> Contacts { get; set; }
+
+        /// <summary>
+        /// Authentication method used by the OAuth 2.0 Token Endpoint
+        /// </summary>
+        /// <value>Authentication method used by the OAuth 2.0 Token Endpoint</value>
+        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public enum TokenEndpointAuthMethodEnum
+        {
+            /// <summary>
+            /// Enum BasicEnum for client_secret_basic
+            /// </summary>
+            [EnumMember(Value = "client_secret_basic")]
+            BasicEnum = 0        }
+
+        /// <summary>
+        /// Authentication method used by the OAuth 2.0 Token Endpoint
+        /// </summary>
+        /// <value>Authentication method used by the OAuth 2.0 Token Endpoint</value>
+        [Required]
+        [DataMember(Name="token_endpoint_auth_method")]
+        public TokenEndpointAuthMethodEnum? TokenEndpointAuthMethod { get; set; }
+
+        /// <summary>
+        /// List of space separated OAuth 2.0 Scope parameter values a Third Party Application may use when requesting an OAuth 2.0 access token
+        /// </summary>
+        /// <value>List of space separated OAuth 2.0 Scope parameter values a Third Party Application may use when requesting an OAuth 2.0 access token</value>
+        [Required]
+        [DataMember(Name="scope")]
+        public List<string> Scope { get; set; }
+
+        /// <summary>
+        /// Gets or Sets GrantTypes
+        /// </summary>
+        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public enum GrantTypesEnum
+        {
+            /// <summary>
+            /// Enum AuthorizationCodeEnum for authorization_code
+            /// </summary>
+            [EnumMember(Value = "authorization_code")]
+            AuthorizationCodeEnum = 0,
+            /// <summary>
+            /// Enum ClientCredentialsEnum for client_credentials
+            /// </summary>
+            [EnumMember(Value = "client_credentials")]
+            ClientCredentialsEnum = 1,
+            /// <summary>
+            /// Enum RefreshTokenEnum for refresh_token
+            /// </summary>
+            [EnumMember(Value = "refresh_token")]
+            RefreshTokenEnum = 2        }
+
+        /// <summary>
+        /// OAuth 2.0 grant_types supported by the Data Custodian Application
+        /// </summary>
+        /// <value>OAuth 2.0 grant_types supported by the Data Custodian Application</value>
+        [Required]
+        [DataMember(Name="grant_types")]
+        public List<GrantTypesEnum> GrantTypes { get; set; }
+
+        /// <summary>
+        /// OAuth 2.0 response_types supported by the Data Custodian Application
+        /// </summary>
+        /// <value>OAuth 2.0 response_types supported by the Data Custodian Application</value>
+        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public enum ResponseTypesEnum
+        {
+            /// <summary>
+            /// Enum CodeEnum for code
+            /// </summary>
+            [EnumMember(Value = "code")]
+            CodeEnum = 0        }
+
+        /// <summary>
+        /// OAuth 2.0 response_types supported by the Data Custodian Application
+        /// </summary>
+        /// <value>OAuth 2.0 response_types supported by the Data Custodian Application</value>
+        [Required]
+        [DataMember(Name="response_types")]
+        public ResponseTypesEnum? ResponseTypes { get; set; }
+
+        /// <summary>
+        /// URI used by the Third Party Application to manage Registration Information (ApplicationInformation resource)
+        /// </summary>
+        /// <value>URI used by the Third Party Application to manage Registration Information (ApplicationInformation resource)</value>
+        [Required]
+        [DataMember(Name="registration_client_uri")]
+        public string RegistrationClientUri { get; set; }
+
+        /// <summary>
+        /// OAuth 2.0 access token used by the Third Party Application to manage Registration Information (ApplicationInformation resource).  Either assigned by the Data Custodian during the Third Party Registration process or generated in response to a Third Party OAuth 2.0 Client Credentials Request with FB&#x3D;44 in the Scope parameter.
+        /// </summary>
+        /// <value>OAuth 2.0 access token used by the Third Party Application to manage Registration Information (ApplicationInformation resource).  Either assigned by the Data Custodian during the Third Party Registration process or generated in response to a Third Party OAuth 2.0 Client Credentials Request with FB&#x3D;44 in the Scope parameter.</value>
+        [Required]
+        [DataMember(Name="registration_access_token")]
+        public Guid? RegistrationAccessToken { get; set; }
+
+        /// <summary>
+        /// \\[DEPRECATED\\] URI used by the Third Party Application to obtain supported OAuth 2.0 Scope values during OAuth 2.0 Authorization Code Request
+        /// </summary>
+        /// <value>\\[DEPRECATED\\] URI used by the Third Party Application to obtain supported OAuth 2.0 Scope values during OAuth 2.0 Authorization Code Request</value>
+        [DataMember(Name="dataCustodianScopeSelectionScreenURI")]
+        public string DataCustodianScopeSelectionScreenURI { get; set; }
+
+        /// <summary>
         /// Returns the string presentation of the object
         /// </summary>
         /// <returns>String presentation of the object</returns>
@@ -338,6 +494,20 @@ namespace IO.Swagger.Models
             sb.Append("  ClientUri: ").Append(ClientUri).Append("\n");
             sb.Append("  RedirectUri: ").Append(RedirectUri).Append("\n");
             sb.Append("  ClientId: ").Append(ClientId).Append("\n");
+            sb.Append("  TosUri: ").Append(TosUri).Append("\n");
+            sb.Append("  PolicyUri: ").Append(PolicyUri).Append("\n");
+            sb.Append("  SoftwareId: ").Append(SoftwareId).Append("\n");
+            sb.Append("  SoftwareVersion: ").Append(SoftwareVersion).Append("\n");
+            sb.Append("  ClientIdIssuedAt: ").Append(ClientIdIssuedAt).Append("\n");
+            sb.Append("  ClientSecretExpiresAt: ").Append(ClientSecretExpiresAt).Append("\n");
+            sb.Append("  Contacts: ").Append(Contacts).Append("\n");
+            sb.Append("  TokenEndpointAuthMethod: ").Append(TokenEndpointAuthMethod).Append("\n");
+            sb.Append("  Scope: ").Append(Scope).Append("\n");
+            sb.Append("  GrantTypes: ").Append(GrantTypes).Append("\n");
+            sb.Append("  ResponseTypes: ").Append(ResponseTypes).Append("\n");
+            sb.Append("  RegistrationClientUri: ").Append(RegistrationClientUri).Append("\n");
+            sb.Append("  RegistrationAccessToken: ").Append(RegistrationAccessToken).Append("\n");
+            sb.Append("  DataCustodianScopeSelectionScreenURI: ").Append(DataCustodianScopeSelectionScreenURI).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
@@ -483,6 +653,76 @@ namespace IO.Swagger.Models
                     ClientId == other.ClientId ||
                     ClientId != null &&
                     ClientId.Equals(other.ClientId)
+                ) && 
+                (
+                    TosUri == other.TosUri ||
+                    TosUri != null &&
+                    TosUri.Equals(other.TosUri)
+                ) && 
+                (
+                    PolicyUri == other.PolicyUri ||
+                    PolicyUri != null &&
+                    PolicyUri.Equals(other.PolicyUri)
+                ) && 
+                (
+                    SoftwareId == other.SoftwareId ||
+                    SoftwareId != null &&
+                    SoftwareId.Equals(other.SoftwareId)
+                ) && 
+                (
+                    SoftwareVersion == other.SoftwareVersion ||
+                    SoftwareVersion != null &&
+                    SoftwareVersion.Equals(other.SoftwareVersion)
+                ) && 
+                (
+                    ClientIdIssuedAt == other.ClientIdIssuedAt ||
+                    ClientIdIssuedAt != null &&
+                    ClientIdIssuedAt.Equals(other.ClientIdIssuedAt)
+                ) && 
+                (
+                    ClientSecretExpiresAt == other.ClientSecretExpiresAt ||
+                    ClientSecretExpiresAt != null &&
+                    ClientSecretExpiresAt.Equals(other.ClientSecretExpiresAt)
+                ) && 
+                (
+                    Contacts == other.Contacts ||
+                    Contacts != null &&
+                    Contacts.SequenceEqual(other.Contacts)
+                ) && 
+                (
+                    TokenEndpointAuthMethod == other.TokenEndpointAuthMethod ||
+                    TokenEndpointAuthMethod != null &&
+                    TokenEndpointAuthMethod.Equals(other.TokenEndpointAuthMethod)
+                ) && 
+                (
+                    Scope == other.Scope ||
+                    Scope != null &&
+                    Scope.SequenceEqual(other.Scope)
+                ) && 
+                (
+                    GrantTypes == other.GrantTypes ||
+                    GrantTypes != null &&
+                    GrantTypes.SequenceEqual(other.GrantTypes)
+                ) && 
+                (
+                    ResponseTypes == other.ResponseTypes ||
+                    ResponseTypes != null &&
+                    ResponseTypes.Equals(other.ResponseTypes)
+                ) && 
+                (
+                    RegistrationClientUri == other.RegistrationClientUri ||
+                    RegistrationClientUri != null &&
+                    RegistrationClientUri.Equals(other.RegistrationClientUri)
+                ) && 
+                (
+                    RegistrationAccessToken == other.RegistrationAccessToken ||
+                    RegistrationAccessToken != null &&
+                    RegistrationAccessToken.Equals(other.RegistrationAccessToken)
+                ) && 
+                (
+                    DataCustodianScopeSelectionScreenURI == other.DataCustodianScopeSelectionScreenURI ||
+                    DataCustodianScopeSelectionScreenURI != null &&
+                    DataCustodianScopeSelectionScreenURI.Equals(other.DataCustodianScopeSelectionScreenURI)
                 );
         }
 
@@ -540,6 +780,34 @@ namespace IO.Swagger.Models
                     hashCode = hashCode * 59 + RedirectUri.GetHashCode();
                     if (ClientId != null)
                     hashCode = hashCode * 59 + ClientId.GetHashCode();
+                    if (TosUri != null)
+                    hashCode = hashCode * 59 + TosUri.GetHashCode();
+                    if (PolicyUri != null)
+                    hashCode = hashCode * 59 + PolicyUri.GetHashCode();
+                    if (SoftwareId != null)
+                    hashCode = hashCode * 59 + SoftwareId.GetHashCode();
+                    if (SoftwareVersion != null)
+                    hashCode = hashCode * 59 + SoftwareVersion.GetHashCode();
+                    if (ClientIdIssuedAt != null)
+                    hashCode = hashCode * 59 + ClientIdIssuedAt.GetHashCode();
+                    if (ClientSecretExpiresAt != null)
+                    hashCode = hashCode * 59 + ClientSecretExpiresAt.GetHashCode();
+                    if (Contacts != null)
+                    hashCode = hashCode * 59 + Contacts.GetHashCode();
+                    if (TokenEndpointAuthMethod != null)
+                    hashCode = hashCode * 59 + TokenEndpointAuthMethod.GetHashCode();
+                    if (Scope != null)
+                    hashCode = hashCode * 59 + Scope.GetHashCode();
+                    if (GrantTypes != null)
+                    hashCode = hashCode * 59 + GrantTypes.GetHashCode();
+                    if (ResponseTypes != null)
+                    hashCode = hashCode * 59 + ResponseTypes.GetHashCode();
+                    if (RegistrationClientUri != null)
+                    hashCode = hashCode * 59 + RegistrationClientUri.GetHashCode();
+                    if (RegistrationAccessToken != null)
+                    hashCode = hashCode * 59 + RegistrationAccessToken.GetHashCode();
+                    if (DataCustodianScopeSelectionScreenURI != null)
+                    hashCode = hashCode * 59 + DataCustodianScopeSelectionScreenURI.GetHashCode();
                 return hashCode;
             }
         }
